src/test/deca/context/invalid/provided/TestErreurPrint.deca
//Resultats :
//Erreur contextuelle
//Ligne 6: Print only accepts strings, ints and floats
{
    boolean bool = true;
    println(bool);
}